@@ -194,8 +194,6 @@ my %configdefh;
 my @substdefh = ("AES_CC",
                  "CONFIGARGS",
                  "DNS_RDATASET_FIXED",
-                 "ENABLE_RPZ_NSDNAME",
-                 "ENABLE_RPZ_NSIP",
                  "HAVE_GEOIP",
                  "HAVE_GEOIP_CITY_V6",
                  "HAVE_GEOIP_V6",
@@ -360,9 +358,7 @@ my @enablelist = ("developer",
                   "isc-spnego",
                   "native-pkcs11",
                   "openssl-hash",
-                  "querytrace",
-                  "rpz-nsdname",
-                  "rpz-nsip");
+                  "querytrace");
 
 # with-xxx/without-xxx
 
@@ -419,8 +415,6 @@ my @help = (
 "  enable-fixed-rrset    enable fixed rrset ordering [default=no]\n",
 "  enable-developer      enable developer build settings [default=no]\n",
 "  enable-querytrace     enable very verbose query trace [default=no]\n",
-"  enable-rpz-nsip       enable rpz-nsip rules [default=yes]\n",
-"  enable-rpz-nsdname    enable rpz-nsdname rules [default=yes]\n",
 "\nOptional Packages:\n",
 "  with-tests            build with test suite\n",
 "  with-extra-tests      build with extra test suite\n",
@@ -677,14 +671,6 @@ sub myenable {
         if ($val =~ /^yes$/i) {
             $enable_querytrace = "yes";
         }
-    } elsif ($key =~ /^rpz-nsip$/i) {
-        if ($val =~ /^no$/i) {
-            $enable_rpz_nsip = "no";
-        }
-    } elsif ($key =~ /^rpz-nsdname$/i) {
-        if ($val =~ /^no$/i) {
-            $enable_rpz_nsdname = "no";
-        }
     } elsif ($key =~ /^auto-validation$/i) {
 	if ($val =~ /^no$/i) {
 	    $validation_default = "yes";
@@ -939,16 +925,6 @@ if ($verbose) {
         print "querytrace: enabled\n";
     } else {
         print "querytrace: disabled\n";
-    }
-    if ($enable_rpz_nsip eq "yes") {
-        print "rpz-nsip: enabled\n";
-    } else {
-        print "rpz-nsip: disabled\n";
-    }
-    if ($enable_rpz_nsdname eq "yes") {
-        print "rpz-nsdname: enabled\n";
-    } else {
-        print "rpz-nsdname: disabled\n";
     }
     print "cookie algorithm: $cookie_algorithm\n";
     print "openssl-path: $openssl_path\n";
@@ -1269,19 +1245,9 @@ if ($enable_fixed_rrset eq "yes") {
     $configdefh{"DNS_RDATASET_FIXED"} = 1;
 }
 
-# enable-rpz-nsip
-if ($enable_rpz_nsip ne "no") {
-    $configdefh{"ENABLE_RPZ_NSIP"} = 1;
-}
-
 # enable-querytrace
 if ($enable_querytrace eq "yes") {
     $configdefh{"WANT_QUERYTRACE"} = 1;
-}
-
-# enable-rpz-nsdname
-if ($enable_rpz_nsdname ne "no") {
-    $configdefh{"ENABLE_RPZ_NSDNAME"} = 1;
 }
 
 # with-tests
@@ -2965,8 +2931,6 @@ exit 0;
 #  --enable-isc-spnego supported (part of GSSAPI)
 #  --enable-fixed-rrset supported
 #  --enable-querytrace supported
-#  --disable-rpz-nsip supported
-#  --disable-rpz-nsdname supported
 #  --enable-full-report supported by verbose
 #  --enable-dnstap not supported (requires libfstrm support on WIN32)
 #  --enable-afl not supported (not yet available on Visual Studio C++)
